Add tokyonight theme

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,1 +1,8 @@
-set-option -g default-shell /bin/zsh
+set -g default-terminal "screen-256color" 
+set-option -ga terminal-overrides ",screen-256color:Tc"
+
+setw -g mode-keys vi
+source-file ~/.tmux/tmux-tokyo-night/tokyonight.tmuxtheme
+
+unbind r
+bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
